--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     "numpy",
     "networkx",
     "pandas",
-    "tifffile"
+    "tifffile",
+    "scikit-image"
 ]
 
 # extras
@@ -75,14 +76,14 @@ source = "vcs"
 
 # https://github.com/charliermarsh/ruff
 [tool.ruff]
-line-length = 88
+line-length = 100
 target-version = "py38"
 # https://beta.ruff.rs/docs/rules/
 extend-select = [
     "E",    # style errors
     "W",    # style warnings
     "F",    # flakes
-    "D",    # pydocstyle
+    # "D",    # pydocstyle
     "I",    # isort
     "U",    # pyupgrade
     # "S",    # bandit
@@ -106,6 +107,9 @@ extend-ignore = [
     "D413", # Missing blank line after last section
     "D416", # Section name should end with a colon
 ]
+
+[tool.ruff.pydocstyle]
+convention = "google"
 
 [tool.ruff.per-file-ignores]
 "tests/*.py" = ["D", "S"]
