--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,18 +69,18 @@ jobs:
           twine check dist/*
           ls -lh dist
 
-      # - name: Upload to PyPI
-      #   run: twine upload dist/*
-      #   env:
-      #     TWINE_USERNAME: __token__
-      #     TWINE_PASSWORD: ${{ secrets.TWINE_API_KEY }}
+      - name: Upload to PyPI
+        run: twine upload dist/*
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.TWINE_API_KEY }}
 
-      # - uses: softprops/action-gh-release@v1
-      #   with:
-      #     generate_release_notes: true
+      - uses: softprops/action-gh-release@v1
+        with:
+          generate_release_notes: true
 
   deploy_wheels:
-    # if: startsWith(github.event.ref, 'refs/tags/v')
+    if: startsWith(github.event.ref, 'refs/tags/v')
     name: deploy wheels (${{ matrix.name }})
     runs-on: ${{ matrix.os }}
     strategy:
@@ -114,7 +114,7 @@ jobs:
           name: ${{ matrix.name }}-wheels
           path: ./wheelhouse/*.whl
 
-      # - name: Upload wheels to PyPI via Twine
-      #   env:
-      #     TWINE_PASSWORD: ${{ secrets.TWINE_API_KEY }}
-      #   run: pipx run twine upload --verbose -u '__token__' wheelhouse/*.whl
+      - name: Upload wheels to PyPI via Twine
+        env:
+          TWINE_PASSWORD: ${{ secrets.TWINE_API_KEY }}
+        run: pipx run twine upload --verbose -u '__token__' wheelhouse/*.whl
