ignore warning, try fix windows

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ dependencies = [
     "pandas",
     "tifffile",
     "scikit-image",
-    "numba",  # technically optional, will still work without it
+    # numba technically optional, will still work without it
+    "numba; python_version != '3.11'",
 ]
 
 # extras
@@ -136,7 +137,10 @@ convention = "google"
 [tool.pytest.ini_options]
 minversion = "6.0"
 testpaths = ["tests"]
-filterwarnings = ["error"]
+filterwarnings = [
+    "error",
+    "ignore:Numba not installed, falling back to slower:UserWarning",
+]
 
 # https://mypy.readthedocs.io/en/stable/config_file.html
 [tool.mypy]
