--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -14,3 +14,10 @@ build:
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/source/conf.py
+
+python:
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
