--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "networkx",
     "pandas",
     "tifffile",
+    "imagecodecs", # required for ctc tiffs
     "scikit-image",
     # numba technically optional, will still work without it
     "numba; python_version != '3.11'",
