Add cell tracking challenge metrics computation (#10)
* Add initial ctc matcher and tests

* Run precommit oops heh

* Add error counting for ctc

* Add 3d compute overlap

* Remove redundant line from merge

* Fix a few bugs and add tqdm

* Update iou to use get_overlapping_bounding_boxes

* Rename function

* Add skeleton matched

* Subsume match_ctc into CTCMatched object

* initial implementation of ctc errors

* Add some tests

* Fix tests after merge

* Move stuff back after weird merge

* Add some weighted sum tests

* Add more tests and test utils

* Change isparent to isintertrackedge

* Remove leftover main

---------

Co-authored-by: Draga Doncila Pop <ddon0001@student.monash.edu>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "pandas",
     "tifffile",
     "scikit-image",
+    "tqdm",
     # numba technically optional, will still work without it
     "numba; python_version != '3.11'",
 ]
