--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires = ["wheel", "setuptools>=40.8.0", "setuptools_scm"]
 # https://peps.python.org/pep-0621/
 [project]
 name = "traccuracy"
-description = "package description."
+description = "Utilities for computing common accuracy metrics on cell tracking challenge solutions with ground truth"
 readme = "README.md"
 requires-python = ">=3.8"
 license = { text = "BSD 3-Clause License" }
