Add typer and cli skeleton

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "tifffile",
     "scikit-image",
     "tqdm",
+    "typer",
     # numba technically optional, will still work without it
     "numba; python_version != '3.11'",
 ]
