--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "networkx",
     "pandas",
     "tifffile",
+    "imagecodecs", # required for ctc tiffs
     "scikit-image",
     "tqdm",
     # numba technically optional, will still work without it
@@ -59,7 +60,9 @@ docs = [
     "Sphinx<6",
     "sphinx-rtd-theme",
     "m2r2",
-    "sphinx-autoapi"
+    "sphinx-autoapi",
+    "nbsphinx",
+    "nbsphinx-link"
 ]
 
 [project.urls]
