--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "imagecodecs", # required for ctc tiffs
     "scikit-image",
     "tqdm",
+    "typer",
     # numba technically optional, will still work without it
     "numba; python_version != '3.11'",
 ]
@@ -69,6 +70,9 @@ docs = [
 homepage = "https://github.com/Janelia-Trackathon-2023/traccuracy"
 repository = "https://github.com/Janelia-Trackathon-2023/traccuracy"
 documentation = "https://traccuracy.readthedocs.io/"
+
+[project.scripts]
+traccuracy = "traccuracy.cli:main"
 
 [tool.setuptools]
 include-package-data = true
