--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,6 +132,7 @@ convention = "google"
 [tool.ruff.per-file-ignores]
 "tests/*.py" = ["D", "S"]
 "setup.py" = ["D"]
+"src/traccuracy/cli.py" = ["B008"]  # Ignore typer functions in function definitions
 
 # https://docs.pytest.org/en/6.2.x/customize.html
 [tool.pytest.ini_options]
