Autodocument cli using sphinx-click

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,8 @@ docs = [
     "m2r2",
     "sphinx-autoapi",
     "nbsphinx",
-    "nbsphinx-link"
+    "nbsphinx-link",
+    "sphinx-click"
 ]
 
 [project.urls]
