Improve rendering of cli documentation in cli and in Read The Docs (#29)
* Update cli docstrings to render nicely with typer

* Autodocument cli using sphinx-click

* Remove unused autosectionlabel extension to eliminate sphinx build errors

* Restore ipython code highlighting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,9 @@ docs = [
     "m2r2",
     "sphinx-autoapi",
     "nbsphinx",
-    "nbsphinx-link"
+    "nbsphinx-link",
+    "sphinx-click",
+    "ipython"
 ]
 
 [project.urls]
@@ -132,6 +134,7 @@ convention = "google"
 [tool.ruff.per-file-ignores]
 "tests/*.py" = ["D", "S"]
 "setup.py" = ["D"]
+"src/traccuracy/cli.py" = ["B008"]  # Ignore typer functions in function definitions
 
 # https://docs.pytest.org/en/6.2.x/customize.html
 [tool.pytest.ini_options]
