Fix sphinx list bug by pinning cersions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,13 +59,16 @@ dev = [
 docs = [
     "mock",
     "Sphinx<6",
-    "sphinx-rtd-theme",
-    "m2r2",
+    "sphinx-rtd-theme>=0.5.2 ",
+    "m2r2<0.3.3",
     "sphinx-autoapi",
     "nbsphinx",
     "nbsphinx-link",
     "sphinx-click",
-    "ipython"
+    "ipython",
+    "docutils~=0.16.0"
+    # had to pin versions because of sphinx list rendering bug
+    # https://stackoverflow.com/questions/67542699/readthedocs-sphinx-not-rendering-bullet-list-from-rst-file
 ]
 
 [project.urls]
