--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,28 @@ jobs:
       - name: Test
         run: pytest --color=yes #--cov --cov-report=xml --cov-report=term-missing
 
+      # - name: Coverage
+      #   uses: codecov/codecov-action@v3
+
+  benchmark:
+    name: Benchmark
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+          cache-dependency-path: "pyproject.toml"
+          cache: "pip"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install -U pip
+          python -m pip install -e .[test]
+
       - name: Run benchmark
         run: |
           cd tests
@@ -62,9 +84,6 @@ jobs:
           alert-threshold: '200%'
           comment-on-alert: true
           summary-always: true
-
-      # - name: Coverage
-      #   uses: codecov/codecov-action@v3
 
   deploy:
     name: Deploy
