--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,15 +68,14 @@ jobs:
 
       - name: Run benchmark
         run: |
-          cd tests
-          pytest bench.py --benchmark-json output.json
+          pytest tests/bench.py --benchmark-json output.json
 
       - name: Store benchmark results
         uses: benchmark-action/github-action-benchmark@v1
         with:
           name: Python Benchmark with pytest-benchmark
           tool: 'pytest'
-          output-file-path: tests/output.json
+          output-file-path: output.json
           external-data-json-path: ./cache/benchmark-data.json
           github-token: ${{ secrets.GITHUB_TOKEN }}
           # auto-push: true
