Speed up benchmark

--- a/.github/workflows/benchmark-report.yml
+++ b/.github/workflows/benchmark-report.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run benchmark
         run: |
-          pytest tests/bench.py --benchmark-json output.json
+          pytest tests/bench.py --benchmark-min-rounds=1 --benchmark-json output.json
 
       - name: Store benchmark results
         uses: benchmark-action/github-action-benchmark@v1
