--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,6 +147,9 @@ filterwarnings = [
     "error",
     "ignore:Numba not installed, falling back to slower:UserWarning",
 ]
+addopts = [
+    "--benchmark-min-rounds=1"
+]
 
 # https://mypy.readthedocs.io/en/stable/config_file.html
 [tool.mypy]
