--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 50 # this is to make sure we obtain the target base commit
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -65,24 +67,41 @@ jobs:
         run: |
           python -m pip install -U pip
           python -m pip install -e .[test]
+          python -m pip install tabulate
 
-      - name: Run benchmark
-        run: |
-          pytest tests/bench.py --benchmark-json output.json
-
-      - name: Store benchmark results
-        uses: benchmark-action/github-action-benchmark@v1
+      - name: Retrieve cached baseline if available
+        uses: actions/cache/restore@v3
         with:
-          name: Python Benchmark with pytest-benchmark
-          tool: 'pytest'
-          output-file-path: output.json
-          external-data-json-path: ./cache/benchmark-data.json
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          # auto-push: true
-          # Show alert with commit comment on detecting possible performance regression
-          alert-threshold: '200%'
-          comment-on-alert: true
-          summary-always: true
+          path: baseline.json
+          key: ${{ github.event.pull_request.base.sha }}
+
+      - name: Run baseline benchmark if not in cache
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          git checkout ${{ github.event.pull_request.base.sha }}
+          pytest tests/bench.py --benchmark-json baseline.json
+
+      - name: Cache baseline results
+        uses: actions/cache/save@v3
+        if: steps.cache.outputs.cache-hit != 'true'
+        with:
+          path: baseline.json
+          key: ${{ github.event.pull_request.base.sha }}
+
+
+
+      - name: Run benchmark on PR head commit
+        run: |
+          git checkout ${{ github.event.pull_request.head.sha }}
+          pytest tests/bench.py --benchmark-json pr.json
+
+      - name: Generate report
+        run: python .github/workflows/benchmark-pr.py baseline.json pr.json report.md
+
+      - name: Comment on commit with report
+        uses: peter-evans/commit-comment@v3
+        with:
+          body-path: report.md
 
   deploy:
     name: Deploy
