--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,10 @@ on:
   pull_request:
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   # check-manifest:
   #   runs-on: ubuntu-latest
@@ -22,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
         platform: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
@@ -35,17 +39,16 @@ jobs:
           cache-dependency-path: "pyproject.toml"
           cache: "pip"
 
-      # if running a cron job, we add the --pre flag to test against pre-releases
       - name: Install dependencies
         run: |
           python -m pip install -U pip
           python -m pip install -e .[test]
 
       - name: Test
-        run: pytest --color=yes #--cov --cov-report=xml --cov-report=term-missing
+        run: pytest --color=yes --cov --cov-report=xml --cov-report=term-missing
 
-      # - name: Coverage
-      #   uses: codecov/codecov-action@v3
+      - name: Coverage
+        uses: codecov/codecov-action@v3
 
   benchmark:
     name: Benchmark
