Add verbose flag to benchmark workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           git checkout ${{ github.event.pull_request.base.sha }}
-          pytest tests/bench.py --benchmark-json baseline.json
+          pytest tests/bench.py --verbose --benchmark-json baseline.json
 
       - name: Cache baseline results
         uses: actions/cache/save@v3
