--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,18 @@ jobs:
         with:
           fetch-depth: 50 # this is to make sure we obtain the target base commit
 
+      - uses: actions/cache@v3
+        id: cache
+        with:
+          path: downloads
+          key: ${{ hashFiles('scripts/download_samples.py') }}
+
+      - name: Download Samples
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          pip install requests
+          python scripts/download_test_data.py
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
