--- a/pyproject.toml
+++ b/pyproject.toml
@@ -152,6 +152,9 @@ filterwarnings = [
     "ignore:Numba not installed, falling back to slower:UserWarning",
 ]
 addopts = ["--benchmark-min-rounds=1"]
+pythonpath = [
+  "tests"
+]
 
 # https://mypy.readthedocs.io/en/stable/config_file.html
 [tool.mypy]
