--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ docs = [
     "sphinx-click==5.0.1",
     "sphinx-rtd-theme==1.3.0",
     "Sphinx==7.2.6",
+    "jupyter-sphinx"
 ]
 
 [project.urls]
