--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,8 @@ docs = [
     "sphinx-click==5.0.1",
     "sphinx-rtd-theme==1.3.0",
     "Sphinx==7.2.6",
-    "jupyter-sphinx"
+    "jupyter-sphinx",
+    "matplotlib"
 ]
 
 [project.urls]
