--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,8 @@ docs = [
     "sphinx-rtd-theme==1.3.0",
     "Sphinx==7.2.6",
     "jupytext",
-    "ipykernel"
+    "ipykernel",
+    "matplotlib"
 ]
 
 [project.urls]
