--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,49 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
+  examples:
+    name: Examples
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Retrieve cached data
+        uses: actions/cache/restore@v4
+        id: cache_data
+        with:
+          path: downloads
+          key: ${{ hashFiles('scripts/download_test_data.py') }}
+
+      - name: Download Samples
+        if: steps.cache_data.outputs.cache-hit != 'true'
+        run: |
+          pip install requests
+          python scripts/download_test_data.py
+
+      - name: Cache sample data
+        uses: actions/cache/save@v4
+        if: steps.cache_data.outputs.cache-hit != 'true'
+        with:
+          path: downloads
+          key: ${{ hashFiles('scripts/download_test_data.py') }}
+
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache-dependency-path: "pyproject.toml"
+          cache: "pip"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install -U pip
+          python -m pip install -e . nbclient
+
+      - name: Run notebooks
+        # This will exit after the first error and will not report errors in subsequent nbs 
+        run: jupyter execute examples/*.ipynb
+
 
   benchmark:
     name: Benchmark
