--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ dev = [
     "ruff",
 ]
 docs = [
-    "ipython==8.17.1",
+    "ipython",
     "myst-parser==2.0.0",
     "nbsphinx-link==1.3.0",
     "nbsphinx==0.9.3",
@@ -144,7 +144,7 @@ convention = "google"
 [tool.ruff.per-file-ignores]
 "tests/*.py" = ["D", "S"]
 "setup.py" = ["D"]
-"docs/source/test_cases/*.pct.py" = ["E402"]
+"docs/source/*/*.pct.py" = ["E402", "B006"]
 # Ignore typer functions in function definitions
 "src/traccuracy/cli.py" = ["B008"]
 
