--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ dev = [
     "ruff",
 ]
 docs = [
-    "ipython",
+    "ipython==8.17.1",
     "myst-parser==2.0.0",
     "nbsphinx-link==1.3.0",
     "nbsphinx==0.9.3",
