--- a/pyproject.toml
+++ b/pyproject.toml
@@ -144,7 +144,7 @@ convention = "google"
 [tool.ruff.per-file-ignores]
 "tests/*.py" = ["D", "S"]
 "setup.py" = ["D"]
-"docs/source/test_cases/*.pct.py" = ["E402"]
+"docs/source/*/*.pct.py" = ["E402", "B006"]
 # Ignore typer functions in function definitions
 "src/traccuracy/cli.py" = ["B008"]
 
