Add commit comment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -193,7 +193,11 @@ jobs:
           python -m pip install -U pip
           python -m pip install -e .[covreport]
 
-      - name: Run coverage report and stash png
+      - name: Store target commit hash
+        id: hash
+        run: echo "commit=${{ github.event.pull_request.head.sha }}" >> "$GITHUB_OUTPUT"
+
+      - name: Run coverage report
         run: |
           python scripts/test_case_report.py ${{ github.event.pull_request.head.sha }}
 
@@ -209,6 +213,12 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           add: "*.png"
+
+      - name: Comment with image link
+        uses: peter-evans/commit-comment@v3
+        with:
+          body: |
+            ![coverage plot](https://github.com/Janelia-Trackathon-2023/traccuracy/blob/test-case-coverage-report/${{ steps.hash.outputs.commit }}.png)
 
 
   deploy:
