--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,15 +52,13 @@ test = [
     "tabulate",
 ]
 dev = [
-    "black",
     "ipython",
     "mypy",
     "pdbpp",
     "pre-commit",
-    "pytest-cov",
-    "pytest",
-    "rich",
     "ruff",
+    "traccuracy[test]",
+    "traccuracy[docs]"
 ]
 docs = [
     "ipython==8.17.1",
@@ -80,6 +78,30 @@ covreport = [
     "traccuracy[test]",
     "seaborn"
 ]
+
+[tool.pixi.project]
+channels = ["conda-forge"]
+platforms = ["osx-arm64"]
+
+[tool.pixi.dependencies]
+python = "3.10.*"
+
+[tool.pixi.pypi-dependencies]
+traccuracy = { path = ".", editable = true }
+
+[tool.pixi.environments]
+default = { solve-group = "default" }
+dev = { features = ["dev", "docs", "test", "covreport"], solve-group = "default" }
+
+[tool.pixi.tasks]
+getdata = "python scripts/download_test_data.py"
+
+[tool.pixi.feature.test.tasks]
+test = "pytest"
+benchmark = { cmd = "pytest tests/bench.py", depends-on = ["getdata"] }
+
+[tool.pixi.feature.covreport.tasks]
+covreport = "python scripts/test_case_report.py local"
 
 [project.urls]
 homepage = "https://github.com/Janelia-Trackathon-2023/traccuracy"
