Update name of test case coverage report task and delete generated jsons

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,7 +101,7 @@ test = "pytest"
 benchmark = { cmd = "pytest tests/bench.py", depends-on = ["getdata"] }
 
 [tool.pixi.feature.covreport.tasks]
-covreport = "python scripts/test_case_report.py local"
+test-case-report = "python scripts/test_case_report.py test-case-report && rm matchers*.json track_errors*.json"
 
 [tool.pixi.feature.docs.tasks]
 kernel-config = { cmd = "python -m ipykernel install --user --name=\"traccuracy-docs\" "}
