--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,7 @@ covreport = [
 
 [tool.pixi.project]
 channels = ["conda-forge"]
-platforms = ["osx-arm64"]
+platforms = ["osx-arm64", "win-64", "linux-64"]
 
 [tool.pixi.dependencies]
 python = "3.10.*"
