--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,8 @@ docs = [
     "sphinx >=7.4.7, <8",
     "matplotlib",
     "jupytext >=1.16.7, <2",
-
+    "nbsphinx-link==1.3.0",
+    "nbsphinx==0.9.3",
 ]
 covreport = [
     "traccuracy[test]",
