--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,8 @@ dev = [
 ]
 docs = [
     "myst-nb >=1.2.0, <2",
-    "sphinx-autoapi >=3.5.0, <4",
+    # "sphinx-autoapi >=3.5.0, <4",
+    "sphinx-autoapi==3.0.0",
     "sphinx-click >=6.0.0, <7",
     "sphinx-rtd-theme >=3.0.1, <4",
     "sphinx >=7.4.7, <8",
