--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,6 @@ dev = [
 ]
 docs = [
     "myst-nb >=1.2.0, <2",
-    # "sphinx-autoapi >=3.5.0, <4",
     "sphinx-autoapi==3.0.0",
     "sphinx-click >=6.0.0, <7",
     "sphinx-rtd-theme >=3.0.1, <4",
@@ -71,6 +70,7 @@ docs = [
     "jupytext >=1.16.7, <2",
     "nbsphinx-link==1.3.0",
     "nbsphinx==0.9.3",
+    "docutils==0.20.*"
 ]
 covreport = [
     "traccuracy[test]",
@@ -82,7 +82,7 @@ channels = ["conda-forge"]
 platforms = ["osx-arm64", "win-64", "linux-64"]
 
 [tool.pixi.dependencies]
-python = "3.10.*"
+python = "3.11.*"
 
 [tool.pixi.pypi-dependencies]
 traccuracy = { path = ".", editable = true }
