Update pyproject and testing workflow to include 3.12
Also allow numba to be installed with all supported python versions
(3.10-3.12), since the numba library seems to say this is okay now.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Typing :: Typed",
 ]
 dynamic = ["version"]
@@ -36,7 +37,7 @@ dependencies = [
     "tqdm",
     "typer",
     # numba technically optional, will still work without it
-    "numba; python_version != '3.11'",
+    "numba",
     "pyarrow",
 ]
 
