Update docs to use exclusively Myst Md (#222)
* First attempt at converting to myst md without building docs

* Initial configuration to get myst md notebooks running in docs build

* Update docs dependencies for myst build

* Add ctc example back in using nsphinx link

* Update copyright year

* Remove remaining unresolved merge conflict

* Fix issue with duplicate autoapi objects by dropping back to the previous pinned version of autoapi

* Reorder toctree

* Fix table wrap issue with custom css

* Update tag for removing cell input contents

* Pin docutils to 0.20.* to address issue that appeared in 0.21.2

AttributeError: module 'docutils.nodes' has no attribute 'reprunicode'

* Suppress a sphinx config warning

* Remove cell input on notebook level instead of cell level for track errors

* Enable dollarmath and colonfence myst extensions

* Remove pixi lock file

---------

Co-authored-by: Caroline Malin-Mayor <malinmayorc@janelia.hhmi.org>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,18 +60,16 @@ dev = [
     "traccuracy[docs]"
 ]
 docs = [
-    "ipython==8.17.1",
-    "myst-parser==2.0.0",
+    "myst-nb >=1.2.0, <2",
+    "sphinx-autoapi==3.0.0",
+    "sphinx-click >=6.0.0, <7",
+    "sphinx-rtd-theme >=3.0.1, <4",
+    "sphinx >=7.4.7, <8",
+    "matplotlib",
+    "jupytext >=1.16.7, <2",
     "nbsphinx-link==1.3.0",
     "nbsphinx==0.9.3",
-    "sphinx-autoapi==3.0.0",
-    "sphinx-click==5.0.1",
-    "sphinx-rtd-theme==1.3.0",
-    "Sphinx==7.2.6",
-    "jupytext",
-    "ipykernel",
-    "jupyter-sphinx",
-    "matplotlib"
+    "docutils==0.20.*"
 ]
 covreport = [
     "traccuracy[test]",
@@ -83,7 +81,7 @@ channels = ["conda-forge"]
 platforms = ["osx-arm64", "win-64", "linux-64"]
 
 [tool.pixi.dependencies]
-python = "3.10.*"
+python = "3.11.*"
 
 [tool.pixi.pypi-dependencies]
 traccuracy = { path = ".", editable = true }
@@ -103,8 +101,8 @@ benchmark = { cmd = "pytest tests/bench.py", depends-on = ["getdata"] }
 test-case-report = "python scripts/test_case_report.py test-case-report && rm matchers*.json track_errors*.json"
 
 [tool.pixi.feature.docs.tasks]
-kernel-config = { cmd = "python -m ipykernel install --user --name=\"traccuracy-docs\" "}
-docs = { cmd = "sphinx-build . ../_build -D jupyter_execute_default_kernel=\"traccuracy-docs\" -D nbsphinx_kernel_name=\"traccuracy-docs\"", cwd="docs/source", depends-on=["kernel-config"]}
+kernel-config = { cmd = "python -m ipykernel install --user --name=\"traccuracy-docs\""}
+docs = { cmd = "sphinx-build docs/source docs/_build", depends-on = ["kernel-config"]}
 
 [project.urls]
 homepage = "https://github.com/Janelia-Trackathon-2023/traccuracy"
