--- a/pyproject.toml
+++ b/pyproject.toml
@@ -205,6 +205,7 @@ disallow_any_generics = false
 disallow_subclassing_any = false
 show_error_codes = true
 pretty = true
+disallow_untyped_defs = true
 
 [[tool.mypy.overrides]]
 module = ["numba"]
