Add additional dependencies to precommit config for mypy

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,10 @@ repos:
     hooks:
       - id: mypy
         files: "^src/"
-        # # you have to add the things you want to type check against here
-        # additional_dependencies:
-        #   - numpy
+        # you have to add the things you want to type check against here
+        additional_dependencies:
+          - networkx
+          - scipy
+          - pandas
+          - tqdm
+          - numpy
