Fully type traccuracy (#231)
* Add library stubs for imported libraries

* Fix existing typing issues in tracking graph

* Fix typing issues in matcher module

* Fix typing issues in track errors

* Fix typing issue in metrics

* Add return types for cli

* Add missing type annotations

* Add additional dependencies to precommit config for mypy

* Correct precommit mypy additional deps to refer the type stubs

* Remove case checking for no matches in iou
np.where and np.nonzero always return a tuple of two empty lists

* Add tests for no segmentation in iou matcher

* Improve comment that was entirely giberish

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,9 @@ repos:
     hooks:
       - id: mypy
         files: "^src/"
-        # # you have to add the things you want to type check against here
-        # additional_dependencies:
-        #   - numpy
+        # you have to add the things you want to type check against here
+        additional_dependencies:
+          - types-networkx
+          - scipy-stubs
+          - pandas-stubs
+          - types-tqdm
